Fix spacing bug on review cards (#433)

--- a/tcf_website/static/reviews/review.css
+++ b/tcf_website/static/reviews/review.css
@@ -1,7 +1,3 @@
-.review-content .review-text-body {
-  white-space: pre-line;
-}
-
 .review-content .review-text-body.collapse:not(.show) {
   display: block;
   height: 12rem;
